# comp_tools

./: .gitignore  .nojekyll  Overview.xlsx  _quarto.yml  counts.csv  ex_boyle-mariotte.ipynb  ex_decay.ipynb  ex_hr.ipynb  ex_linreg.ipynb  ex_mpcorb.ipynb  ex_mporb.ipynb  ex_radon.ipynb  ex_snell.ipynb  exercises.ipynb  index.html  index.ipynb  intro_calculus.ipynb  intro_np.ipynb  intro_np_da.ipynb  intro_pint.ipynb  intro_polars.ipynb  intro_scipy.ipynb  intro_vectorfield.ipynb  intro_vis.ipynb  kelvin2rgb.csv  np_intro.ipynb  pyproject.toml  search.json  test.ipynb  test_polars.ipynb  vis_intro.ipynb  voltage.csv
circuitikz/: basic_circuit.tex  kirchhoff_ex1.tex  kirchhoff_ex2.tex
data/: zrh_temp_1924.csv
docs/: index.html  search.json
exercises/: battery.ipynb  binding_energy.ipynb  coil.ipynb  decay.ipynb  ex_decay.ipynb  ex_hr.ipynb  ex_isotopes.ipynb  ex_linreg.ipynb  ex_mpcorb.ipynb  ex_radon.ipynb  ex_sunspots.ipynb  hr.ipynb  interpolation.ipynb  isotopes.ipynb  lens.ipynb  lightbulb.ipynb  loop.ipynb  looping.ipynb  mean_temp.ipynb  mpcorb.ipynb  radon.ipynb  sunspots.py  torque.ipynb
matplotlib/: matplotlib.html  matplotlib.ipynb
numpy/: arrays.html  arrays.ipynb  broadcasting.html  broadcasting.ipynb  data_analysis.html  data_analysis.ipynb  interpolation.html  interpolation.ipynb  intro_vectorfield.ipynb  random.html  random.ipynb  vectorfields.html  vectorfields.ipynb  vectors_matrices.html  vectors_matrices.ipynb
pint/: charged_sphere.ipynb  pint.html  pint.ipynb
polars/: intro_polars.ipynb  polars.html  polars.ipynb
scipy/: constants.html  (+7 more)
(+197 files in other folders)
