[project]
name = "da-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "astroquery>=0.4.10",
    "jupyterlab>=4.4.3",
    "marimo>=0.14.10",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "papermill>=2.6.0",
    "pint>=0.24.4",
    "polars>=1.30.0",
    "quarto-cli>=1.7.33",
    "scipy>=1.15.3",
    "sympy>=1.14.0",
    "uncertainties>=3.2.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
